--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About me"
 description: "Hello."
-header-img: "" <!--img/post-bg-rwd.jpg -->
+header-img: "img/post-bg-rwd.jpg"
 ---
 
 <!-- Language Selector -->
